--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/kupuaidve">View on GitHub</a>
 
           <h1 id="project_title">Kupuaidve.GitHub.com</h1>
-          <h2 id="project_tagline">my blog</h2>
+          <h2 id="project_tagline"></h2>
 
         </header>
     </div>
